# biochatter-metta

./: .gitignore  LICENSE  README.md  bumpversion.cfg  main.py  mettaRunner.py  pyproject.toml  requirements.txt  setup.py
biochatter/: metta_prompt.py  metta_sample  prompts.py
biocypher_config/: schema_config.yaml
metta_out/: compound_edges.metta  compound_nodes.metta  descriptor_nodes.metta  edges.metta  nodes.metta
src/biochatter_metta/: metta_prompt.py  prompts.py  query_interaction.py  vectorstore.py
src/biochatter_metta/biocypher_config/: schema_mappings.json
test/: entities.json  relationships.json  test.py
tests/: test.py
utils/: nodes.metta  test.metta
