[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "biochatter_metta"
version = "0.0.1"
authors = [
  { name="Tollan", email="tollan.ititaw@singularitynet.io" }
]
description = "A library for generating MeTTa queries using Natural Language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]


[project.urls]
"Homepage" = "https://github.com/iCog-Labs-Dev/biochatter-metta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}